[#70417238] - fix hamburger menu on iphone4

--- a/www/assets/styles/wysiwyg.css
+++ b/www/assets/styles/wysiwyg.css
@@ -1388,7 +1388,7 @@ header {
   opacity: 0;
   width: 100%;
   position: fixed;
-  top: -265px;
+  top: -400px;
   left: 0;
   background: #FFF;
   z-index: 199;
